tests/NormalTests/paczka2/big_fuzzy/52633684.err
Error in line 1: UaxLFtw85nY S114 78,2
Error in line 5: FAVn4sfnrW A737 79,8
Error in line 6: FAVn4sfnrW S259 8,8
Error in line 8: FAVn4sfnrW S630 73,6
Error in line 20: 5U8HtOz S259 312,0
Error in line 22: iOfFex A737 79,2
Error in line 44: AVn4sfnrW S259 57,3
Error in line 40: 9SVLLw6 S630 84,1
Error in line 47: HLE S114 76,2
Error in line 45: FAVn4sfnrW S259 226,3
Error in line 67: FAVn4sfnrW A737 7,8
Error in line 85: FAVn4sfnrW S630 57³6
Error in line 79: iOfFex A737 38,5
Error in line 90: UaxLFtw85nY S630 5,8
Error in line 89: HLE S114 78,4
Error in line 98: HLE S630 27,2
Error in line 92: FAVn4sfnrW S630 111,7
Error in line 115: 5U8HtOz S259 68,0
Error in line 121: S630 S259 26,7
Error in line 134: 5U8HtOz S114 9,0
Error in line 135: 9SVLLw6 S259 73,7
Error in line 141: FAVn4sfnrW A737 29,8
Error in line 145: 5U8HtOz S630 -1,0
Error in line 151: 9SVLLw6 S114 76,4
Error in line 152: 9SVLLw6 A737 83,0
Error in line 150: HLE S630 18,3
Error in line 167: HLE S114 331,81
Error in line 138: 5U8HtOz S630 51,4
Error in line 170: UaxLFtw85nY S630 66,1
Error in line 174: S630 S114 44,7
Error in line 181: iOfFex S114 97,0
Error in line 184: iOfFex S630 24,4
Error in line 194: HLE A737 29,7
Error in line 192: FAVn4sfnrW S259 67,6
Error in line 195: HLE S259 93,3
Error in line 206: iOfFex S259 98,0
Error in line 215: 5U8HtOz S114 72,7
Error in line 221: UaxLFtw85nY S630 92,90
Error in line 218: iOfFex S630 3,4
Error in line 220: 9SVLLw6 S630 58,5
Error in line 219: 5U8HtOz A737 74,4
Error in line 231: 5U8HtOz S630 6,7
Error in line 224: FAVn4sfnrW A737 89,5
